# kipp-shark

./: .env.example  .gitignore  POETRY_SETUP.md  README.md  datasets_result.txt  download_full_plancton.py  download_full_sharks.py  download_full_sst.py  download_full_swot.py  download_plancton.py  download_sharks.py  earthaccess_manager.py  extract_data_nc.py  extract_data_sst_nc.py  find_nasa_dataset.py  model.ipynb  pyproject.toml  requirements.txt
web/: index.html  package-lock.json  package.json
web/public/data/: plancton_20241117.csv  predictions.csv  sharks_20241117.csv  sst_20241117.csv  swot_20251001.csv
web/public/models/: bruce_the_shark.glb  shark_v5.glb:Zone.Identifier
web/src/: App.tsx
web/src/components/: ChatPanel.tsx  EduSection.tsx  GlobeView.tsx  LayerControlPanel.tsx  Navbar.tsx  Shark3DView.tsx  SimulatorSection.tsx
web/src/types/: papaparse.d.ts
